force-app/main/default/objects/Unique_Key_Definition__mdt/Unique_Key_Definition__mdt.object-meta.xml
<CustomObject>
    <description>Defines the attributes of unique keys being generated and used throughout Salesforce</description>
    <label>Unique Key Definition</label>
    <pluralLabel>Unique Key Definitions</pluralLabel>
</CustomObject>