force-app/main/default/objects/Unique_Key_Definition__mdt/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <description>Number of characters in the unique key including the prefix</description>
    <inlineHelpText>Includes prefix</inlineHelpText>
    <label>Length</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>