force-app/main/default/objects/Unique_Key_Definition__mdt/fields/Object_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Developer_Name__c</fullName>
    <description>Developer name of the object where the unique key is stored. Used for checking that a generated key is unique.</description>
    <label>Object Developer Name</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>