force-app/main/default/objects/Unique_Key_Definition__mdt/fields/Prefix__c.field-meta.xml
<CustomField>
    <fullName>Prefix__c</fullName>
    <description>Prefix of the unique key. Leave blank if the unique key has no prefix.</description>
    <label>Prefix</label>
    <length>40</length>
    <type>Text</type>
</CustomField>